ajout themeSombre sur body

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
     background-color: var(--silver);
 }
 
-.themeSombre body {
+body.themeSombre {
     background-color: var(--midnightblue);
 }
 
