--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
     padding: 0;
     margin: 0;
 }
+/* Fonts */
+
 /* General */
 :root {
     --midnightblue: #2c3e50;
@@ -18,6 +20,9 @@
 
 body {
     background-color: var(--silver);
+    /* font-family: 'Sansita Swashed', cursive; */
+    
+    font-family: 'Nunito', sans-serif;
 }
 
 body.themeSombre {
@@ -136,31 +141,55 @@ button {
 
 
 /* Page Projets */
+
+
+/*div accordeon*/
+.div_project_list_wrapper{
+    /*background-color: rgba(0,0,0,0.03);*/
+}
+
 .div_project_container {
-  background-color: #eee;
-  color: #444;
+    text-align: center;
+    padding: 18px;
+    padding-top: 0;
+}
+
+.div_project_accordeon {
+  background-color: var(--belize_hole);
+  color: white;
   cursor: pointer;
   padding: 18px;
+  margin-top: 18px;
   width: 100%;
   text-align: left;
   border: none;
+  border-radius: 25px;
   outline: none;
-  transition: 0.4s;
+  transition: 0.4s ease-in-out;
+  transition: border-radius 0.4s 0.3s;
 }
 
 .div_project {
-  padding: 0 18px;
+  padding: 0px;
   background-color: white;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-in-out;
 }
 
-.active, .div_project_container:hover {
-  background-color: #ccc;
+.div_project_accordeon.active{
+    margin-bottom: 0;
+    border-radius: 25px 25px 0 0;
+    transition: border-radius 0s;
 }
 
-.div_project_container:after {
+.active, .div_project_accordeon:hover {
+  background-color: var(--nephritis);
+  width: 100%;
+  height: 100%;
+}
+
+.div_project_accordeon:after {
   content: '\02795'; /* Unicode character for "plus" sign (+) */
   font-size: 13px;
   color: #777;
@@ -171,10 +200,52 @@ button {
 .active:after {
   content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
+/*div project*/
+.div_project {
+    background-color: transparent;
+}
+
+.div_task {
+    position:relative;
+    border: 1px solid var(--silver);
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+    text-align: left;
+}
+
+.div_task div{
+    background-color: transparent;
+    text-align: left;
+    font-size: 16px;
+    padding: 18px;
+}
 
 
+.div_task .div_task_title, .div_task .div_comment_container{
+    background-color: rgba(0,0,0,0.03);
+    font-weight: bold;
+    padding: 18px;
+}
 
+.div_task_due_date{
 
+}
+
+.div_task_employe {
+
+}
+
+.div_comment_container div{
+    background-color: transparent;
+    text-align: left;
+    font-weight: normal;
+    font-size: 16px;
+    padding: 18px;
+}
+
+.div_comment_container{
+    font-weight: bold;
+}
 
 
 /* Utilitaires */
