Finalisation du css pour la page projets.

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
     --pomegranate: #c0392b;
 }
 
-body {
+body, .div_list_accordeon{
     background-color: var(--silver);
     /* font-family: 'Sansita Swashed', cursive; */
     
@@ -183,8 +183,8 @@ button {
     transition: border-radius 0s;
 }
 
-.active, .div_project_accordeon:hover {
-  background-color: var(--nephritis);
+.active, .div_project_accordeon:hover, .div_list_accordeon:hover {
+  background-color: var(--nephritis)!important;
   width: 100%;
   height: 100%;
 }
@@ -198,41 +198,108 @@ button {
 }
 
 .active:after {
-  content: "\2796"; /* Unicode character for "minus" sign (-) */
+  content: "\2796" !important; /* Unicode character for "minus" sign (-) */
 }
+
 /*div project*/
 .div_project {
     background-color: transparent;
 }
 
-.div_task {
-    position:relative;
+.div_list_accordeon{
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: solid 1px var(--silver);
+  border-radius: 4px;
+  outline: none;
+  transition: 0.4s ease-in-out;
+  transition: border-radius 0.4s 0.3s;
+}
+
+.accordeon_text{
+    flex-grow: 1;
+}
+
+.div_list_accordeon:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.div_list_accordeon.active{
+    margin-bottom: 0;
+    border-radius: 4px 4px 0 0;
+    transition: border-radius 0s;
+    border-bottom: 0;
+}
+
+.div_task_container{
     border: 1px solid var(--silver);
     border-top: none;
     border-radius: 0 0 5px 5px;
-    text-align: left;
 }
 
-.div_task div{
+.div_task_container .div_task_container_title{
+    background-color: rgba(0,140,0,0.1);
+}
+
+.div_task_container div{
     background-color: transparent;
     text-align: left;
     font-size: 16px;
-    padding: 18px;
+    padding: 10px;
 }
 
+div.div_task {
+    position:relative;
+    padding: 0;
+    text-align: left;
+    padding: 0px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
+}
 
-.div_task .div_task_title, .div_task .div_comment_container{
-    background-color: rgba(0,0,0,0.03);
+.div_list_accordeon.active + .div_task{
+    border: solid 1px var(--silver);
+    border-top: 0;
+    border-radius: 0 0 4px 4px;
+}
+
+div.div_task_wrapper{
+    background-color:  rgba(0,0,0,0.03);
+}
+
+div.div_task_description, div.div_task_due_date, div.div_task_employe{
+    padding-left: 24px;
+}
+
+.div_task .div_task_title, .div_task .div_comment_container_title{
+    background-color: rgba(0,200,0,0.03);
     font-weight: bold;
     padding: 18px;
 }
 
-.div_task_due_date{
-
+div.div_task_due_date, div.div_task_description, div.div_task_employe{
+    font-size: 14px;
 }
 
-.div_task_employe {
+div.div_task_due_date b, div.div_task_description b, div.div_task_employe b{
+    font-size: 16px;
+    text-decoration: underline var(--silver);
+    text-decoration-style: solid;
+}
 
+.div_comment_container{
+    padding: 0!important;
 }
 
 .div_comment_container div{
@@ -247,6 +314,20 @@ button {
     font-weight: bold;
 }
 
+div.div_comment{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+div.div_comment_employe{
+    padding: 5px;
+}
+
+div.div_comment_text{
+    font-size: 14px;
+    align-self: center;
+    padding: 5px;
+}
 
 /* Utilitaires */
 
