--- a/css/main.css
+++ b/css/main.css
@@ -36,16 +36,15 @@ header {
 
 footer {
     background-color: var(--asbestos);
-    position: absolute;
     width: 980px;
-    bottom: 0;
+    border-radius: 0px 0px 20px 20px;
 }
 
 main {
     min-height: 100vh;
     width: 980px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 20px 20px 0px 0px;
 }
 
 .themeSombre main{
